[gd_scene load_steps=9 format=3 uid="uid://bvp8criybgmgo"]

[ext_resource type="Script" uid="uid://cl2nyef24hlg0" path="res://scenes/work_in_progress/word_in_progress.gd" id="1_f1mbf"]
[ext_resource type="Environment" uid="uid://cb8fpas5whplq" path="res://resources/sky.tres" id="2_m4arb"]
[ext_resource type="PackedScene" uid="uid://cwdqhxqli0h81" path="res://scenes/kate/skin.tscn" id="3_v3tve"]
[ext_resource type="FontFile" uid="uid://q6asaymqordk" path="res://assets/fonts/FrancoisOne-Regular.ttf" id="4_wyo2o"]
[ext_resource type="Script" uid="uid://dkm540higx3dj" path="res://scenes/work_in_progress/v_box_container.gd" id="5_jhapx"]
[ext_resource type="Theme" uid="uid://dttkgr10omq45" path="res://resources/work_in_progress-button.tres" id="6_supoy"]
[ext_resource type="AudioStream" uid="uid://dya6v5twpu22b" path="res://assets/sounds/click.ogg" id="7_0huh8"]
[ext_resource type="AudioStream" uid="uid://dl6yw205f862m" path="res://assets/music/menus.wav" id="8_m4arb"]

[node name="WordInProgress" type="Node3D"]
script = ExtResource("1_f1mbf")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("2_m4arb")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.840641, 0.54135513, 0.016042367, 0.39233425, 0.5882804, 0.70710677, 0.3733585, 0.6007169, -0.7069248, 0, 6, -11)
shadow_enabled = true

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, 1.3)

[node name="KateSkin" parent="." instance=ExtResource("3_v3tve")]
transform = Transform3D(-1, 0, -8.742278e-08, 0, 1, 0, 8.742278e-08, 0, -1, 0, 0, 0)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.7372549, 0.7372549, 0.7372549, 0.27450982)

[node name="Label" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -279.0
offset_right = 279.0
offset_bottom = 183.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0.5294118, 0.5294118, 0.37254903, 1)
theme_override_colors/font_outline_color = Color(1, 0.8, 0, 1)
theme_override_constants/shadow_offset_x = 24
theme_override_constants/shadow_offset_y = 12
theme_override_constants/outline_size = 32
theme_override_fonts/font = ExtResource("4_wyo2o")
theme_override_font_sizes/font_size = 128
text = "Work in progress..."

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 30.0
offset_top = -74.0
offset_right = 230.0
offset_bottom = 74.0
grow_vertical = 2
theme_override_constants/separation = 5
script = ExtResource("5_jhapx")

[node name="NewGame" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
theme = ExtResource("6_supoy")
text = "New game"

[node name="Exit" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
theme = ExtResource("6_supoy")
text = "Exit"

[node name="ClickSound" type="AudioStreamPlayer" parent="Control/VBoxContainer"]
stream = ExtResource("7_0huh8")
bus = &"SFX"

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_m4arb")
autoplay = true
bus = &"music"

[connection signal="pressed" from="Control/VBoxContainer/NewGame" to="Control/VBoxContainer" method="_on_new_game_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Exit" to="Control/VBoxContainer" method="_on_exit_pressed"]
